samples/_failures_safe/1761208901_cb5ffb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c767f41.c:173: error: expected ‘;’, ‘,’ or ‘)’ at end of input
